# BookingServer

./: .env  .gitignore  CMakeLists.txt  Dockerfile  conanfile.py  docker-compose.yaml
cmake/: core.cmake
src/: appenv.cpp  appenv.h  main.cpp
src/db/: dbconnectionpool.h  dbmanager.cpp  dbmanager.h  idbconnection.h  mariadbconnection.cpp  mariadbconnection.h
src/http/: router.cpp  router.h  server.cpp  server.h  session.cpp  session.h  shared.h  variantvalue.h
src/http/api/: apimanager.cpp  apimanager.h  irequesthandler.h
src/http/api/v1/: usershandler.cpp  usershandler.h
src/http/base/: router.cpp  router.h  server.cpp  server.h  session.cpp
src/http/base/middleware/: irequestmiddleware.h  requestloggingmiddleware.h
src/http/shared/: shared.h  variantvalue.cpp
src/migrations/: base-tables.sql
tests/: CMakeLists.txt  router_test.cpp
